--- a/fastlane/screenshots/screenshots.html
+++ b/fastlane/screenshots/screenshots.html
@@ -96,8 +96,63 @@
       <button class="tabLink" onclick="openTab(event, 'byScreen')">By Screen</button>
     </div>
     <div id="byLanguage" class="tabContent"><h1 class="tabTitle">By Language:</h1>
+      <h2 id="en-US">en-US</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="2">
+            <a id="en-US-iPhone 15 Pro" class="deviceName" href="#en-US-iPhone 15 Pro">iPhone 15 Pro</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 15 Pro-01LoginScreen.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 15 Pro-01LoginScreen.png" style="width: 100%;" alt="en-US iPhone 15 Pro" data-tab="1" data-counter="1">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 15 Pro-0Launch.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 15 Pro-0Launch.png" style="width: 100%;" alt="en-US iPhone 15 Pro" data-tab="1" data-counter="2">
+            </a>
+          </td>
+        </tr>
+      </table>
     </div>
     <div id="byScreen" class="tabContent"><h1 class="tabTitle">By Screen:</h1>
+      <h2 id="01LoginScreen" class="screen">01LoginScreen</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="01LoginScreen-iPhone 15 Pro" class="deviceName" href="#01LoginScreen-iPhone 15 Pro">iPhone 15 Pro</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 15 Pro-01LoginScreen.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 15 Pro-01LoginScreen.png" style="width: 100%;" alt="en-US iPhone 15 Pro" data-tab="2" data-counter="1">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="0Launch" class="screen">0Launch</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="0Launch-iPhone 15 Pro" class="deviceName" href="#0Launch-iPhone 15 Pro">iPhone 15 Pro</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 15 Pro-0Launch.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 15 Pro-0Launch.png" style="width: 100%;" alt="en-US iPhone 15 Pro" data-tab="2" data-counter="2">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
     </div>
     <div id="overlay">
       <img id="imageDisplay" src="" alt="" />
